--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Your Site</title>
 
     <!-- Google Analytics -->
-    <!--<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7HC37MG9M"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-XXXXXXXXXX');
-    </script>-->
+      gtag('config', 'G-V7HC37MG9M');
+    </script>
 </head>
 <body>
     <h1> Hello </h1>
